--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.71'
 }
 
 group 'com.moviesguo'
@@ -10,10 +10,13 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    google()
+    jcenter()
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
